Create all player ships, and assign Fourway to the current player's ship

--- a/client/leaderboard/leaderboard.html
+++ b/client/leaderboard/leaderboard.html
@@ -22,7 +22,7 @@
 <template name="player">
   <div class="player {{selected}}">
     <span class="name">{{name}}</span>
-    <span class="position">{{pos_x}}, {{pos_y}}</span>
+    <span class="position">({{color}}) {{pos_x}}, {{pos_y}}</span>
     <span class="score">{{score}}</span>
   </div>
 </template>
