Preserve username in Session object (except reload is currently required on logout)

--- a/client/login_screen/login_screen.html
+++ b/client/login_screen/login_screen.html
@@ -1,6 +1,6 @@
 <template name="login_screen">
 <div class="login_screen" id="login_screen">
   <input type="button" class="loginout" value="Login as:"/>
-  <input type="text" class="username" value="player name"/>
+  <input type="text" class="username" value="{{player_name}}"/>
 </div>
 </template>
