--- a/client/login_screen/login_screen.html
+++ b/client/login_screen/login_screen.html
@@ -1,6 +1,8 @@
 <template name="login_screen">
 <div class="login_screen" id="login_screen">
-  <input type="button" class="loginout" value="Login as:"/>
-  <input type="text" class="username" value="{{player_name}}"/>
+  <input type="button" class="loginout" value="{{ login_button_text }}"/>
+  <input type="text" class="username"
+    value="{{ selected_player_name }}" disabled="{{ player_name_disabled }}"/>
+  <span class="status">{{ status_message }}</span>
 </div>
 </template>
