--- a/client/login_screen/login_screen.html
+++ b/client/login_screen/login_screen.html
@@ -2,7 +2,7 @@
 <div class="login_screen" id="login_screen">
   <input type="button" class="loginout" value="{{ login_button_text }}"/>
   <input type="text" class="username"
-    value="{{ selected_player_name }}" disabled="{{ player_name_disabled }}"/>
+    value="{{ selected_player_name }}" {{ player_name_disabled }}/>
   <span class="status">{{ status_message }}</span>
 </div>
 </template>
