--- a/client/client.html
+++ b/client/client.html
@@ -5,5 +5,8 @@
   {{> login_screen }}
   <div class="game_screen" id="cr-stage"></div>
   {{> leaderboard }}
+  <hr/>
+  Source:
+  <a href='https://github.com/benton/flatspace/'>https://github.com/benton/flatspace/</a>
 </body>
 
