Minor style tweaks

--- a/client/client.html
+++ b/client/client.html
@@ -6,7 +6,9 @@
   <div class="game_screen" id="cr-stage"></div>
   {{> leaderboard }}
   <hr/>
+  <span class="source_link">
   Source:
   <a href='https://github.com/benton/flatspace/'>https://github.com/benton/flatspace/</a>
+  </span>
 </body>
 
