--- a/client/leaderboard/leaderboard.html
+++ b/client/leaderboard/leaderboard.html
@@ -15,7 +15,10 @@
     {{/if}}
 
     {{#unless selected_name}}
-    <div class="none">Click a player to select</div>
+    <div class="none">
+      Click a player name to select,<br/>
+      or type in a new player name.
+    </div>
     {{/unless}}
   {{/unless}}
 </template>
