Add "type" to Player model

--- a/client/leaderboard/leaderboard.html
+++ b/client/leaderboard/leaderboard.html
@@ -26,7 +26,7 @@
 <template name="player">
   <div class="player {{selected}}">
     <span class="name">{{name}}</span>
-    <span class="position">({{color}}) {{pos_x}}, {{pos_y}}</span>
+    <span class="position">({{color}} {{type}}) {{pos_x}}, {{pos_y}}</span>
     <span class="score">{{score}}</span>
   </div>
 </template>
